# simple_sniffer

./: CMakeLists.txt  LICENSE  README.md  settings.json  simple_sniffer.c  simple_sniffer.cmake  testing_task.txt
src/: CMakeLists.txt  Settings.c  Settings.h  Snif_lib.c  Snif_lib.h  simple_sniffer.c
